fixed login user and get post by price
