# Api/api/docs/swagger.json
@@ -1757,8 +1757,9 @@
                 }
             }
         },
-        "/v1/users/login/user": {
-            "get": {
+        "/v1/users/login": {
+            "post": {
+                "description": "This api for post user by code",
                 "consumes": [
                     "application/json"
                 ],
@@ -1772,7 +1773,7 @@
                 "parameters": [
                     {
                         "description": "Login",
-                        "name": "login",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
